--- a/style.css
+++ b/style.css
@@ -6,19 +6,18 @@ body {
 
 #navbar{
     display: grid;
-    grid-template-columns: 67.507em 22.492em;
+    grid-template-columns: 58.2542em 33.622em;
     background-color: #fdffff;
-    width: 90em;
+    width: 74em;
     height: 3.467em;
     margin:0px;
     position:relative;
-    top: -0.5em;
     left: -0.3em;
 }
 
 #left_navbar{
     display: grid;
-    grid-template-columns: 9.457em 28.613em 29.184em;
+    grid-template-columns: 0.457em 28.613em 29.184em;
     grid-template-rows: 0em 0.5em 2.727em ;
     grid-area: 1/1/2/2;
     border-width: 0.008em;
@@ -206,18 +205,21 @@ END OF CODE FOR NAVIGATION BAR
 
  #home_page{
     display: grid;
-    grid-template-columns: 8.568em 15.804em 1.748em 37.762em 1.748em 22.027em;
+    grid-template-columns: 0.568em 14.216em 1.748em 32.762em  22.027em;
+    position: relative;
+    left: -8.8em;
     
 }
 
 
 #min_prof{
     display: grid;
-    grid-template-columns: 10.979em 15.680em;
-    grid-template-rows: 0.8em 3.986em 8.02em 4.115em 4.533em 2.793em;
+    grid-template-columns: 10.979em 14.092em;
+    grid-template-rows: 0.8em 3.6em 8.02em 4.115em 3.633em 2.793em;
     font-weight:100;
     position: relative;
     left: -1.9em;
+    grid-area: 1/1/2/2;
 }
 
 .top_border{
@@ -228,7 +230,7 @@ END OF CODE FOR NAVIGATION BAR
 }
 
 .top_border img{
-    width:15.88em;
+    width:14.292em;
 
 }
 
@@ -236,8 +238,9 @@ END OF CODE FOR NAVIGATION BAR
     width: 4.983em;
     border-radius: 2.4775em;
     position: relative;
-    left: 5.4em;
+    left: 4.4em;
     top: -2.60em;
+    grid-area: 2/3/3/4;
 }
 
 #profile{
@@ -246,6 +249,7 @@ END OF CODE FOR NAVIGATION BAR
     border-width: 0.01em;
     border-color: #ebebeb;
     border-style: solid;
+
 }
 
 #con{
@@ -304,7 +308,7 @@ END OF CODE FOR NAVIGATION BAR
 
     position: relative;
     top: 0.9em;
-    left: 16.5em;
+    left: 14.5em;
     color:#1966b8;
     font-size: smaller;
 
@@ -326,7 +330,7 @@ color: gray;
     position: relative;
     margin-top: -3em;
     left: 4em;
-    top: -0.5em;
+    top: -1.4em;
     
 }
 
@@ -334,14 +338,14 @@ color: gray;
 #tools .tools_font1{
     position: relative;
     left: 1.7em;
-    top: -0.5em;
+    top: -1em;
     
 }
 
 
 #tools img{
     position: relative;
-    top: -0.75em;
+    top: -1.45em;
     width: 1.5em;
     left: 1em;
 }
@@ -363,9 +367,9 @@ color: gray;
 
 #bmin_prof{
     display: grid;
-    grid-template-columns: 0em 15.680em;
+    grid-template-columns: 0em 14.080em;
     position: relative;
-    top: 25.213em;
+    top: 23.213em;
     left: 0.5em;
     
 }
@@ -389,7 +393,7 @@ color: gray;
 
 #bmin_prof1 h4 span{
     position: relative;
-    left: 9em;
+    left: 8em;
     color: gray;
     font-size: large;
 }
@@ -404,7 +408,7 @@ color: gray;
     position: relative;
     color: gray;
     height: 3em;
-    top: -15.2em;
+    top: -14.2em;
     
 }
 
@@ -425,6 +429,7 @@ color: gray;
     grid-area: 1/4/2/5;
     display: grid;
     grid-template-rows: 0.8em 8.251em 2.237em 20em;
+    
 }
 
 
@@ -435,6 +440,7 @@ color: gray;
     border-style: solid;
     background-color: #fdffff;
     border-radius: 1em;
+    width: 34em;
 }
 
 .post_dp{
@@ -449,7 +455,7 @@ color: gray;
     position: relative;
     left: 1em;
     top: -1em;
-    width: 30.468em;
+    width: 32.468em;
     height: 2.596em;
     border-radius: 2em;
     border-width: 0.1em;
@@ -470,6 +476,7 @@ color: gray;
     flex-direction: row;
     position: relative;
     top: -0.2em;
+    left: -0.75em;
 }
 
 #post_self_options figure{
@@ -486,13 +493,13 @@ color: gray;
     color: gray;
     position: relative;
     top: -1.5em;
-    left: 2.5em;
+    left: 2.25em;
 }
 
 
 .sep1{
     position: relative;
-    width: 30.769em;
+    width: 27.269em;
     left: -3em;
     top: -0.2em;
     
@@ -501,7 +508,7 @@ color: gray;
 .sort{
     grid-area: 3/1/4/2;
     position: relative;
-    left: 38.5em;
+    left: 34em;
     top: -2.56em;
     font-weight:normal;
 }
@@ -530,7 +537,7 @@ color: gray;
     border-style: solid;
     background-color: #fdffff;
     border-radius: 1em;
-    height: 51.5em;
+    height: 46.5em;
     position: relative;
     top: -3em;
 
@@ -562,7 +569,7 @@ color: gray;
 .dots{
     width: 2em;
     position: relative;
-    left: 35em;
+    left: 30.5em;
     top: -4em;
 }
 
@@ -651,7 +658,7 @@ color: gray;
 .author h3{
     position: relative;
     top: -18em;
-    left: 28em;
+    left: 25em;
     color: #1966b8;
     font-size: large;
     font-weight: bold;
@@ -661,13 +668,13 @@ color: gray;
     background-color: #fdffff;
     position: relative;
     top: -20em;
-    height: 37em;
+    height: 32.5em;
 
 }
 
 
 .content .ac_content img{
-    width: 38em;
+    width: 34em;
 }
 
 .content .ac_content+img{
@@ -734,20 +741,20 @@ color: gray;
 
 #post .feed .share .promote .promote_comment{
     position: relative;
-    top: -21em;
-    left: 8em;
+    top: -20.9em;
+    left: 7em;
 }
 
 #post .feed .share .promote .promote_share{
     position: relative;
-    top: -25.7em;
-    left: 19em;
+    top: -25.3em;
+    left: 17em;
 }
 
 #post .feed .share .promote .promote_send{
     position: relative;
-    top: -30.2em;
-    left: 28em;
+    top: -29.7em;
+    left: 24em;
 }
 
 .promote .promote_like figure img{
@@ -758,10 +765,19 @@ color: gray;
     width:2.198em;
 }
 
+
+#home_page{
+    display: grid;
+    grid-template-columns: 8.568em 14.216em 1.748em 35.262em  12.027em;
+    
+}
+
+
+
 #news{
     display: grid;
-    grid-template-rows: 0.883em 17.587em 1em 17.482em 1em;
-    grid-area: 1/6/2/7;
+    grid-template-rows: 0.883em 17.587em 1em 15.482em 1em;
+    grid-area: 1/5/2/6;
     
 }
 
@@ -772,6 +788,7 @@ color: gray;
     border-style: solid;
     background-color: #fdffff;
     border-radius: 1em;
+    width: 20em;
 }
 
 #hiring{
@@ -781,6 +798,7 @@ color: gray;
     border-style: solid;
     background-color: #fdffff;
     border-radius: 1em;
+    width: 20em;
 }
 
 #footer{
@@ -800,7 +818,7 @@ color: gray;
 #ac_news h4 img{
     position: relative;
     top: 0.4em;
-    left: 10.75em;
+    left: 10em;
     width: 1.5em;
 }
 
@@ -855,10 +873,9 @@ color: gray;
 }
 
 #hiring img{
-    width: 20.6em;
+    width: 18.75em;
     position: relative;
     left: 0.6em;
-    height: 17.4em;
 }
 
 #footer h6{
@@ -982,6 +999,52 @@ color: gray;
     left: 3.5em;
 }
 
-/* body {
-    background-color: blue;
-} */
+/* ////////// *//* ////////// *//* ////////// *//* ////////// *//* ////////// *//* ////////// *//* ////////// *//* ////////// */
+
+
+
+#index_page{
+    display: flex;
+    flex-direction:row;
+    position: relative;
+    top: -0.5em;
+    height: fit-content;
+}
+
+
+.blank_space{
+    flex: 1 1 auto;
+    width: 0.1em;
+    margin: 0px;
+    border: green;
+    border-style: solid;
+}
+
+#main{
+    flex: 2 1 auto;
+    width: 55em;
+    background-color: #F3F2EE;
+}
+
+.blank_space1{
+    background-color: #FFFFFF;
+    height: 3.467em;
+    border:#ebebeb;
+    border-style: solid;
+    border-width: 0.008em;
+    border-top-width: 0em;
+    border-left-width: 0em;
+    border-right-width: 0em;
+}
+
+#index_page .blank_space2{
+    background-color: #F3F2EE;
+    width: 5em;
+    height: 50vh;
+}
+
+@media screen and (max-width: 1200px) {
+    #index_page .blank_space{
+        display: none;
+    }
+}
